[project]
name = "kraken_database_logger"
authors = [
  { name="Patrick Baus", email="patrick.baus@physik.tu-darmstadt.de" },
]
description = "Python 3 Kraken database logger"
readme = "README.md"
license = { text="GNU General Public License v3 (GPLv3)" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Home Automation",
]
keywords = ["IoT",]
dependencies = [
    "aiomqtt ~= 2.5.0",
    "asyncpg ~= 0.31.0",
    "python-decouple ~= 3.8",
    "pydantic ~= 2.12.0",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/PatrickBaus/database_logger"
"Bug Tracker" = "https://github.com/PatrickBaus/database_logger/issues"
"Download" = "https://github.com/PatrickBaus/database_logger/releases"

[project.optional-dependencies]
dev = [
    "black", "build", "isort", "mypy", "pre-commit", "pylint", "pytest"
]

test = [
    "mypy", "pylint", "pytest"
]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120

[tool.pylint.'MISCELLANEOUS']
notes = ["FIXME", "XXX",]

[tool.isort]
line_length = 120
profile = "black"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
    # conftest.py reorders tests moving slow ones to the end of the list
    "slow",
]

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.dynamic]
version = {attr = "_version.__version__"}
