[project]
name = "kraken_database_logger"
authors = [
  { name="Patrick Baus", email="patrick.baus@physik.tu-darmstadt.de" },
]
description = "Python 3 Kraken database logger"
readme = "README.md"
license = { text="GNU General Public License v3 (GPLv3)" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Home Automation",
]
keywords = ["IoT",]
dependencies = [
    "aiomqtt ~= 2.5.1",
    "asyncpg ~= 0.31.0",
    "python-decouple ~= 3.8",
    "pydantic >= 2.12,< 2.14",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/PatrickBaus/database_logger"
"Bug Tracker" = "https://github.com/PatrickBaus/database_logger/issues"
"Download" = "https://github.com/PatrickBaus/database_logger/releases"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120

[tool.pylint.'MISCELLANEOUS']
notes = ["FIXME", "XXX",]

[tool.isort]
line_length = 120
profile = "black"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
    # conftest.py reorders tests moving slow ones to the end of the list
    "slow",
]

[build-system]
requires = [
    "setuptools>=82.0.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[dependency-groups]
dev = [
    "black~=26.3.1",
    "build>=1.4.3,<1.6.0",
    "isort~=8.0.1",
    "pre_commit>=4.5.1,<4.7.0",
    "types-simplejson~=3.20.0.20260408",
    {include-group = "lint"},
    {include-group = "test"},
]
lint = [
    "mypy>=1.20.1,<2.1.0",
    "pylint~=4.0.5",
    "pylint-pydantic~=0.4.1",
]
test = [
    "pytest~=9.0.3",
]

[tool.setuptools.dynamic]
version = {attr = "_version.__version__"}
